[package]
name = "simplygo"
version = "0.1.0"
edition = "2021"
description = "Simplygo SDK for Rust."
license = "MIT"
repository = "https://github.com/mrzzy/providence"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde", "std"] }
chrono-tz = "0.8.2"
reqwest = { version = "0.11.18", features = ["blocking", "multipart"] }
scraper = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
regex = "1.7.3"


[dev-dependencies]
assert_cmd = { version = "2.0.11", features = ["color", "color-auto"] }
assert_fs = "1.0.13"
httpmock = "0.7.0"

