[package]
name = "simplygo-scrape"
version = "0.1.0"
edition = "2021"
description  = "Scrapes public transport trip data from Simplygo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
reqwest = "0.11.14"
scraper = "0.15.0"
