[package]
name = "simplygo_src"
version = "0.1.0"
edition = "2021"
description  = "Providence: SimplyGo Data Source scrapes raw data off SimplyGo."
license = "MIT"
repository = "https://github.com/mrzzy/providence"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.0"
chrono = { version = "0.4.24", features = ["serde", "std"] }
chrono-tz = "0.8.1"
clap = { version = "4.2.1", features = ["derive", "env"] }
futures = "0.3.28"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["blocking", "multipart"] }
scraper = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
url = "2.3.1"
