[package]
name = "simplygo_src"
version = "0.1.0"
edition = "2021"
description  = "Providence: SimplyGo Data Source scrapes raw data off SimplyGo."
license = "MIT"
repository = "https://github.com/mrzzy/providence"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.2"
aws-sdk-s3 = "0.25.1"
chrono = { version = "0.4.24", features = ["serde", "std"] }
chrono-tz = "0.8.2"
clap = { version = "4.2.7", features = ["derive", "env"] }
rand = "0.8.5"
regex = "1.7.3"
reqwest = { version = "0.11.18", features = ["blocking", "multipart"] }
scraper = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["rt", "macros"] }
url = "2.3.1"

[dev-dependencies]
assert_cmd = { version = "2.0.11", features = ["color", "color-auto"] }
assert_fs = "1.0.13"
serial_test = "2.0.0"
