[package]
name = "simplygo_src"
version = "0.1.0"
edition = "2021"
description  = "SimplyGo Data Source scrapes raw data off SimplyGo."
license = "MIT"
repository = "https://github.com/mrzzy/providence"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde", "std"] }
simplygo = "0.2.0"
clap = { version = "4.2.7", features = ["derive", "env"] }
serde_json = "1.0.96"

[dev-dependencies]
assert_cmd = { version = "2.0.11", features = ["color", "color-auto"] }
assert_fs = "1.0.13"
serial_test = "2.0.0"
