[package]
name = "providence-simplygo-src"
version = "0.1.0"
edition = "2021"
description  = "Simplygo source for Providence"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "multipart"] }
scraper = "0.15.0"
