[package]
name = "simplygo_tfm"
version = "0.1.0"
edition = "2021"
description  = "SimplyGo Transform extracts trip data from raw SimplyGo data."
license = "MIT"
repository = "https://github.com/mrzzy/providence"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
simplygo = "0.1.0"

[dev-dependencies]
assert_cmd = { version = "2.0.11", features = ["color", "color-auto"] }
assert_fs = "1.0.13"
